# eigh23

./: LICENSE.txt  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml
ext/: _eigh23.cpp
src/eigh23/: __init__.py
tests/: test_eigh23.py  test_eigh23_benchmark.py
